# hackathon_2024

./: .gitignore  Hackathon 2024 - Machine Learning II.md  constants.py  create_db.ipynb  hackathon.db  home.py  leaderboard.py  logging_tools.py  pyproject.toml  requirements.txt  tools.py
pages/: admin.py  evaluate.py  progress.py
