[tool.poetry]
name = "hackathon-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
plotly = "^5.20.0"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
streamlit = "^1.32.2"
streamlit-authenticator = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
